--- a/home/.config/nvim/dein.toml
+++ b/home/.config/nvim/dein.toml
@@ -16,9 +16,10 @@
 [[plugins]]
 repo = 'vim-denops/denops.vim'
 
-
+# 補完 (vim)
 [[plugins]]
 repo = 'prabirshrestha/vim-lsp'
+if = '!has("nvim")'
 hook_add='''
 let g:lsp_signs_enabled = 1         " enable signs
 let g:lsp_diagnostics_echo_cursor = 1 " enable echo under cursor when in normal mode
@@ -31,6 +32,7 @@ let g:lsp_signs_warning = {'text': '‼'}
 
 [[plugins]]
 repo = 'mattn/vim-lsp-settings'
+if = '!has("nvim")'
 hook_add='''
 let g:lsp_settings_servers_dir = expand('~/.local/share/vim-lsp-settings/servers')
 let g:lsp_settings_filetype_terraform = 'terraform-ls'
@@ -180,21 +182,21 @@ call denite#custom#option('default', s:denite_default_options)
 
 
 # Lint
-[[plugins]]
-repo = 'vim-syntastic/syntastic'
-hook_add = '''
-set statusline+=%#warningmsg#
-set statusline+=%{SyntasticStatuslineFlag()}
-set statusline+=%*
-let g:syntastic_always_populate_loc_list = 1
-let g:syntastic_auto_loc_list = 1
-let g:syntastic_check_on_open = 1
-let g:syntastic_check_on_wq = 0
-let g:syntastic_yaml_checkers = ['yamllint']
-let g:syntastic_mode_map = { 'mode': 'passive', 'active_filetypes': ['ruby'] }
-let g:syntastic_ruby_checkers = ['rubocop']
-let g:syntastic_typescript_checkers = ['eslint']
-'''
+# [[plugins]]
+# repo = 'vim-syntastic/syntastic'
+# hook_add = '''
+# set statusline+=%#warningmsg#
+# set statusline+=%{SyntasticStatuslineFlag()}
+# set statusline+=%*
+# let g:syntastic_always_populate_loc_list = 1
+# let g:syntastic_auto_loc_list = 1
+# let g:syntastic_check_on_open = 1
+# let g:syntastic_check_on_wq = 0
+# let g:syntastic_yaml_checkers = ['yamllint']
+# let g:syntastic_mode_map = { 'mode': 'passive', 'active_filetypes': ['ruby'] }
+# let g:syntastic_ruby_checkers = ['rubocop']
+# let g:syntastic_typescript_checkers = ['eslint']
+# '''
 
 [[plugins]]
 repo = 'bronson/vim-trailing-whitespace'
