--- a/home/.config/nvim/dein.toml
+++ b/home/.config/nvim/dein.toml
@@ -116,6 +116,10 @@ repo = 'Shougo/dein.vim'
 [[plugins]]
 repo = 'Shougo/denite.nvim'
 hook_add = '''
+" Python パスを設定
+let g:python_host_prog = system('(type asdf &>/dev/null && echo -n $(asdf which python2)) || echo -n $(which python)')
+let g:python3_host_prog = system('(type asdf &>/dev/null && echo -n $(asdf which python3)) || echo -n $(which python3)')
+
 " Define mappings
 nnoremap <silent> ,f :<C-u>DeniteProjectDir file/rec<CR>
 nnoremap <silent> ,g :<C-u>DeniteProjectDir grep<CR>
