Update lsp configurations

--- a/home/.config/nvim/dein_ddc.toml
+++ b/home/.config/nvim/dein_ddc.toml
@@ -2,9 +2,25 @@
 [[plugins]]
 repo = 'Shougo/ddc.vim'
 depends = ['context_filetype.vim', 'pum.vim']
-on_event = 'InsertEnter'
+on_source = 'nvim-lspconfig'
 hook_source = '''
   source ~/.config/nvim/plugins/ddc.rc.vim
+'''
+
+# Lsp
+[[plugins]]
+repo = 'neovim/nvim-lspconfig'
+if = 'has("nvim")'
+on_event = 'BufRead'
+hook_source = '''
+  lua require('lsp_rc')
+'''
+
+[[plugins]]
+repo = 'williamboman/nvim-lsp-installer'
+on_source = 'nvim-lspconfig'
+hook_source = '''
+lua require'lsp-installer'.setup()
 '''
 
 [[plugins]]
