--- a/home/.config/nvim/dein/base.toml
+++ b/home/.config/nvim/dein/base.toml
@@ -262,3 +262,7 @@ autocmd bufenter * if (winnr("$") == 1 && exists("b:NERDTree") && b:NERDTree.isT
 # TOML
 [[plugins]]
 repo = 'cespare/vim-toml'
+
+# git
+[[plugins]]
+repo = "airblade/vim-gitgutter"
