--- a/home/.config/nvim/dein/ddc.toml
+++ b/home/.config/nvim/dein/ddc.toml
@@ -86,15 +86,22 @@ on_source = 'ddc.vim'
 [[plugins]]
 repo = 'matsui54/denops-popup-preview.vim'
 on_source = 'ddc.vim'
-# if = "!has('nvim')"
 hook_source = '''
-	let g:popup_preview_config = {
-	      \ 'delay': 30,
-        \ 'maxWidth': 100,
-        \ 'winblend': 0,
-	      \ }
-  call popup_preview#enable()
-  let g:markdown_fenced_languages = ['ts=typescript']
+let g:popup_preview_config = {
+  \ 'delay': 30,
+  \ 'maxWidth': 100,
+  \ 'winblend': 0,
+\ }
+call popup_preview#enable()
+let g:markdown_fenced_languages = ['ts=typescript']
+'''
+
+[[plugins]]
+repo = 'matsui54/denops-signature_help'
+on_source = 'ddc.vim'
+hook_source = '''
+call signature_help#enable()
+let g:lsp_signature_help_enabled = 0
 '''
 
 [[plugins]]
