--- a/home/.config/nvim/dein/base.toml
+++ b/home/.config/nvim/dein/base.toml
@@ -117,8 +117,8 @@ repo = 'Shougo/dein.vim'
 repo = 'Shougo/denite.nvim'
 hook_add = '''
 " Python パスを設定
-let g:python_host_prog = system('(type asdf &>/dev/null && echo -n $(asdf which python2)) || echo -n $(which python)')
-let g:python3_host_prog = system('(type asdf &>/dev/null && echo -n $(asdf which python3)) || echo -n $(which python3)')
+let g:python_host_prog = system('bash -c "(type asdf &>/dev/null && echo -n $(asdf which python2)) || echo -n $(which python)"')
+let g:python3_host_prog = system('bash -c "(type asdf &>/dev/null && echo -n $(asdf which python3)) || echo -n $(which python3)"')
 
 " Define mappings
 nnoremap <silent> ,f :<C-u>DeniteProjectDir file/rec<CR>
