--- a/home/.config/nvim/dein/base.toml
+++ b/home/.config/nvim/dein/base.toml
@@ -241,6 +241,9 @@ call dein#source('molokai')
 colorscheme molokai
 '''
 
+[[plugins]]
+repo = 'nvim-treesitter/nvim-treesitter'
+
 # gitを操作
 [[plugins]]
 repo = 'tpope/vim-fugitive'
