--- a/home/.config/nvim/dein/base.toml
+++ b/home/.config/nvim/dein/base.toml
@@ -157,7 +157,7 @@ call denite#custom#var('grep', {
   \ 'command': ['ag'],
   \ 'recursive_opts': [],
   \ 'pattern_opt': [],
-  \ 'default_opts': ['--follow', '--nogroup', '--nocolor']
+  \ 'default_opts': ['--follow', '--nogroup', '--nocolor', '--ignore-dir', 'node_modules', '--hidden']
   \ })
 
 " Define aliases
