--- a/home/.config/nvim/dein/ddc.toml
+++ b/home/.config/nvim/dein/ddc.toml
@@ -1,7 +1,7 @@
 # ddc
 [[plugins]]
 repo = 'Shougo/ddc.vim'
-depends = ['context_filetype.vim', 'ddc-ui-pum']
+depends = ['context_filetype.vim', 'ddc-ui-pum', 'vim-vsnip']
 on_source = 'nvim-lspconfig'
 hook_source = '''
   source ~/.config/nvim/plugins/ddc.rc.vim
@@ -120,7 +120,7 @@ on_source = 'ddc.vim'
 
 [[plugins]]
 repo = 'hrsh7th/vim-vsnip'
-depends = ['vim-vsnip-integ', 'friendly-snippets']
+depends = ['ddc-source-vsnip', 'friendly-snippets']
 on_event = 'InsertEnter'
 hook_add = '''
 " Expand
@@ -142,7 +142,7 @@ let g:lsp_settings = {
 '''
 
 [[plugins]]
-repo = 'hrsh7th/vim-vsnip-integ'
+repo = 'uga-rosa/ddc-source-vsnip'
 
 [[plugins]]
 repo = 'rafamadriz/friendly-snippets'
